Add a ProjectController to access ProgresSQL

--- a/FPSim.Api/appsettings.json
+++ b/FPSim.Api/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=yfr1aoeg9d.database.windows.net;Database=Lanner.FLSTraining;User ID=developer;Password=rs0LE$rs0LE$;"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
