--- a/Tests/FPSim.Data.Repository.Test/FPSim.Data.Repository.Test.csproj
+++ b/Tests/FPSim.Data.Repository.Test/FPSim.Data.Repository.Test.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FPSim.Data.Repository\FPSim.Data.Repository.csproj" />
+    <ProjectReference Include="..\..\Src\FPSim.Data.Repository\FPSim.Data.Repository.csproj" />
   </ItemGroup>
 
 </Project>
