--- a/Src/FPSim.Api/appsettings.json
+++ b/Src/FPSim.Api/appsettings.json
@@ -7,12 +7,12 @@
     "IncludeScopes": false,
     "Debug": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
     },
     "Console": {
       "LogLevel": {
-        "Default": "Warning"
+        "Default": "Debug"
       }
     }
   }
