--- a/Src/FPSim.Api/appsettings.json
+++ b/Src/FPSim.Api/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "ConnectionStrings": {
+    // When deployed the database connection string set as an environment variable, see manifest.yml
     "Default": "User ID=postgres;Password=rs0LE$;Host=localhost;Port=5432;Database=fpsim;Pooling=true;",
-    "RemoteConnection": "User ID=u67iy3frnbgct1hd;Password=vcvp26y7qozn21blp2u35dm4z;Host=db-13ad83c6-5921-4d49-bedc-42af4d67f531.c7uxaqxgfov3.us-west-2.rds.amazonaws.com;Port=5432;Database=postgres;Pooling=true;"
   },
   "Logging": {
     "IncludeScopes": false,
