--- a/Src/FPSim.App/bower.json
+++ b/Src/FPSim.App/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "fpsim.app",
-  "dependencies": {    
+  "dependencies": {
     "polymer": "^1.9.0",
     "px-app-nav": "^2.0.12",
     "px-branding-bar": "^1.1.0",
@@ -14,7 +14,11 @@
     "iron-ajax": "^2.0.6",
     "promise-polyfill": "PolymerLabs/promise-polyfill#1",
     "px-panel": "^1.0.8",
-    "px-view": "^1.1.3"
+    "px-view": "^1.1.3",
+    "px-file-upload": "^1.1.0",
+    "paper-input": "^2.0.3",
+    "paper-button": "^2.0.0",
+    "paper-toast": "^2.0.0"
   },
   "devDependencies": {
     "px-flexbox-design": "^1.0.2",
